# JniDemoTest

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/rodinbell/jnidemotest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/gpio/: CMakeLists.txt
app/src/main/cpp/serialport/: CMakeLists.txt  com_serialport_SerialPort.h  nativeSerial.cpp
app/src/main/java/com/rodinbell/jnidemotest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/rodinbell/jnidemotest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
serialport/: build.gradle
serialport/src/main/java/com/serialport/: ReadCallback.java  ReadListener.java  SerialPort.java  SerialTransport.java
